@startuml

title __FEATURETABLE's Class Diagram__\n

  namespace de.tuberlin.dima.bdapro.advancedProcessing {
    namespace featureTable {
      class de.tuberlin.dima.bdapro.advancedProcessing.featureTable.BasicColumn {
          - isFeature : boolean
          - name : String
          - typeInformation : TypeInformation
          + BasicColumn()
          + getName()
          + getTypeInformation()
          + isFeature()
      }
    }
  }
  

  namespace de.tuberlin.dima.bdapro.advancedProcessing {
    namespace featureTable {
      abstract class de.tuberlin.dima.bdapro.advancedProcessing.featureTable.Column {
          + getFullName()
          {abstract} + getName()
          {abstract} + getTypeInformation()
          {abstract} + isFeature()
          + setParentTable()
      }
    }
  }
  

  namespace de.tuberlin.dima.bdapro.advancedProcessing {
    namespace featureTable {
      class de.tuberlin.dima.bdapro.advancedProcessing.featureTable.FeatureTable {
          - columns : List<Column>
          - data : Table
          - keyColumns : List<Column>
          - name : String
          + FeatureTable()
          + getColumns()
          + getData()
          + getKeyColumns()
          + getName()
          + join()
          + write()
          - FeatureTable()
      }
    }
  }
  

  de.tuberlin.dima.bdapro.advancedProcessing.featureTable.BasicColumn -up-|> de.tuberlin.dima.bdapro.advancedProcessing.featureTable.Column
  de.tuberlin.dima.bdapro.advancedProcessing.featureTable.Column o-- de.tuberlin.dima.bdapro.advancedProcessing.featureTable.FeatureTable : parentTable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
